--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
 	<script src="js/script.js" defer></script>
 </head>
 <body>
-	
+	<div class="swiper slider">
+		<div class="swiper-wrapper slider__wrapper">
+			<div class="swiper-slide slider__item">
+				<div class="slider__layer" style="background-image: url(img/screen-1/layer-back.jpg);"></div>
+				<div class="slider__layer" style="background-image: url(img/screen-1/layer-middle.png);"></div>
+				<div class="slider__layer" style="background-image: url(img/screen-1/layer-front.png);"></div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__layer" style="background-image: url(img/screen-2/layer-back.jpg);"></div>
+				<div class="slider__layer" style="background-image: url(img/screen-2/layer-gera.png);"></div>
+				<div class="slider__layer" style="background-image: url(img/screen-2/layer-yen.png);"></div>
+				<div class="slider__layer" style="background-image: url(img/screen-2/layer-front.png);"></div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__layer" style="background-image: url(img/screen-3/layer-back.jpg);"></div>
+				<div class="slider__layer" style="background-image: url(img/screen-3/layer-middle.png);"></div>
+				<div class="slider__layer" style="background-image: url(img/screen-3/layer-ciri.png);"></div>
+				<div class="slider__layer" style="background-image: url(img/screen-3/layer-front.png);"></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
